# depot_indoor-weather-station

./: .gitignore  .gitmodules  CMakeLists.txt  west.yml
app/: CMakeLists.txt  prj.conf
app/cmake/: iws_minimal.cmake  iws_simu.cmake
app/config/: gui_conf.h  hal_conf.h  lv_conf.h  lv_drv_conf.h
app/src/: main.cpp
app/src/core/: data_type.h  singleton.h
app/src/core/logger/: itf_logger.h  log.h  logger.cpp  logger.h
app/src/core/logger/std_logger/: std_logger.cpp  std_logger.h
app/src/event_manager/: event_manager.cpp  event_manager.h
app/src/gui/: gui.cpp  gui.h  gui_conf_internal.h
app/src/gui/common/: coord_converter.h  proxy_value_to_gui.h
app/src/gui/fonts/: roboto_30.c  roboto_50.c  roboto_60.c  roboto_70.c
app/src/gui/nav_controller/: nav_ctrl.cpp  nav_ctrl.h
app/src/gui/screens/: itf_screens.h  screens.cpp  screens.h  screens_manager.cpp  screens_manager.h  screens_name.h
app/src/gui/screens/data_screen/: data_screen.cpp  data_screen.h
app/src/gui/widgets/circular_indicator/: circular_indicator.cpp  circular_indicator.h
app/src/hal/: hal.cpp  hal.h  hal_conf_internal.h  itf_hal.h
app/src/hal/common/: itf_bme680.h  itf_sensor.h  sensor_availability.h
app/src/hal/hal_stub/: hal_stub.cpp  hal_stub.h
app/src/hal/hal_stub/Mouse/: mouse.cpp  mouse.h
app/src/hal/hal_stub/display/: display.cpp  display.h
app/src/hal/hal_stub/keyboard/: keyboard_ui_shortcut.cpp  keyboard_ui_shortcut.h
app/src/proxy/: proxy.cpp  proxy.h
app/src/proxy/data_refresher/: data_refresher.cpp  data_refresher.h
app/src/proxy/model/: model.cpp  model.h
(+4 files in other folders)
